--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,11 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/snazzy-info-window/dist/snazzy-info-window.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -80,8 +82,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css",
-            //    "../node_modules/snazzy-info-window/dist/snazzy-info-window.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
